improved  led and fixed knob overflow

--- a/browser/scss/widgets/_knob.scss
+++ b/browser/scss/widgets/_knob.scss
@@ -18,6 +18,7 @@
         height: 100%;
         display: flex;
         align-items: center;
+        overflow: hidden;
 
         .input {
             bottom:0;
